# exam-python-rq-by-docker

./: .gitignore  README.md  app_file.py  compose.yml  pyproject.toml  tasks_file.py
file_task/: app.py  compose.yml  tasks.py
file_task/sample-logs/: 3worker-log.txt  singleworker-log.txt
sample-logs/: 4worker-print.txt
simple_task/: Dockerfile  tasks.py
simple_task/sample-logs/: singleworker-print.txt
