[project]
name = "exam-python-rq-by-docker"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "hrsano645", email = "hrs.sano645@gmail.com" }
]
dependencies = [
    "redis>=5.0.1",
    "rq>=1.15.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
